<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>loam_feature_localization</name>
  <version>0.1.0</version>
  <description>The ndt_scan_matcher package</description>
  <maintainer email="ataparlar@leodrive.ai">Ata Parlar</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>pcl</depend>
  <depend>pcl_conversions</depend>
  <depend>opencv</depend>
  <depend>cv_bridge</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>GTSAM</depend>
  <depend>openmp</depend>

  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
